# Generated by Django 3.2 on 2021-09-01 06:35

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Answer',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('month', models.IntegerField(blank=True, choices=[(1, 'January'), (2, 'February'), (3, 'March'), (4, 'April'), (5, 'May'), (6, 'June'), (7, 'July'), (8, 'August'), (9, 'Septemeber'), (10, 'October'), (11, 'November'), (12, 'December')], null=True, verbose_name='Month')),
                ('value', models.JSONField(verbose_name='Value')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='CentralBody',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('name', models.CharField(max_length=50, unique=True, verbose_name='Name')),
                ('name_np', models.CharField(blank=True, max_length=50, null=True, unique=True, verbose_name='Nepali Name')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='FiscalYear',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('name', models.CharField(max_length=50, unique=True, verbose_name='Name')),
                ('start_date', models.DateField(verbose_name='Start Date')),
                ('end_date', models.DateField(verbose_name='End Date')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='Survey',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('name', models.CharField(blank=True, max_length=20, null=True, unique=True, verbose_name='Name')),
                ('level', models.CharField(choices=[('C', 'Central Level'), ('P', 'Province Level'), ('L', 'Local Level')], max_length=1, verbose_name='Level')),
                ('approval_state', models.CharField(choices=[('P', 'Pending'), ('A', 'Approved'), ('R', 'Rejected'), ('C', 'Cancelled')], default='P', max_length=1, verbose_name='Approval State')),
                ('is_active', models.BooleanField(default=True, verbose_name='Active')),
                ('fiscal_year', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='surveys', to='core.fiscalyear', verbose_name='Fiscal Year')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='Question',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('title', models.CharField(error_messages={'unique': 'Question titles should be unique.'}, max_length=200, unique=True, verbose_name='Title')),
                ('is_document_required', models.BooleanField(default=False, help_text='Designates whether the option answer required document file or not.', verbose_name='Is Document Required')),
                ('month_requires', models.BooleanField(default=False, verbose_name='Month Requires')),
                ('sequence_id', models.PositiveIntegerField(null=True, unique=True, verbose_name='Sequence id')),
                ('parent', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='children_questions', to='core.question', verbose_name='Parent Question')),
                ('survey', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='questions', to='core.survey', verbose_name='Survey')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='ProvinceBody',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('name', models.CharField(max_length=50, unique=True, verbose_name='Name')),
                ('name_np', models.CharField(blank=True, max_length=50, null=True, unique=True, verbose_name='Nepali Name')),
                ('central', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='province_bodies', to='core.centralbody', verbose_name='Central Bod')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='Option',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('title', models.CharField(max_length=100, verbose_name='Title')),
                ('field_type', models.CharField(choices=[('C', 'Char'), ('B', 'Boolean'), ('D', 'Date'), ('De', 'Decimal'), ('F', 'File')], max_length=2, verbose_name='Field Type')),
                ('is_calc_field', models.BooleanField(default=False, help_text='Designates whether the option is used for calculation or not.', verbose_name='Is Calculation Field')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='options_created', to=settings.AUTH_USER_MODEL, verbose_name='Created By')),
                ('question', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='options', to='core.question', verbose_name='Question')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='LocalBody',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('name', models.CharField(max_length=50, unique=True, verbose_name='Name')),
                ('name_np', models.CharField(blank=True, max_length=50, null=True, unique=True, verbose_name='Nepali Name')),
                ('province', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='local_bodies', to='core.provincebody', verbose_name='Central Bod')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='FillSurvey',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('budget_period', models.CharField(blank=True, max_length=10, null=True, verbose_name='Budget Period')),
                ('approval_state', models.CharField(blank=True, max_length=20, null=True, verbose_name='Approval State')),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='fill_surveys_created', to=settings.AUTH_USER_MODEL)),
                ('survey', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='fill_surveys', to='core.survey')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='AnswerDocument',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('document', models.FileField(upload_to='answer-documents/', verbose_name='Document')),
                ('answer', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='documents', to='core.answer', verbose_name='Answer')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.AddField(
            model_name='answer',
            name='fill_survey',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='core.fillsurvey', verbose_name='Fill Survey'),
        ),
        migrations.AddField(
            model_name='answer',
            name='option',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='answers', to='core.option', verbose_name='Option'),
        ),
    ]
